# loam

./: .env  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  redeploy.sh
.cargo/: config.toml
.github/workflows/: cd.yml  npm.yml  rust.yml  tests.yml
crates/loam/: Cargo.toml
crates/loam-build/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-build/src/: deps.rs  lib.rs
crates/loam-cli/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-cli/examples/soroban/calculator/: Cargo.toml
crates/loam-cli/examples/soroban/core/: Cargo.toml
crates/loam-cli/examples/soroban/ft/: Cargo.toml
crates/loam-cli/examples/soroban/ft/src/: ft.rs  lib.rs
crates/loam-cli/examples/soroban/nft/: Cargo.toml
crates/loam-cli/examples/soroban/nft/src/: lib.rs  nft.rs  subcontract.rs  test.rs
crates/loam-cli/examples/soroban/wallet/: Cargo.toml
crates/loam-cli/examples/soroban/wallet/src/: lib.rs  subcontract.rs
crates/loam-cli/src/: lib.rs
crates/loam-cli/src/commands/: build.rs  init.rs  mod.rs  update_env.rs
crates/loam-cli/src/commands/dev/: mod.rs
crates/loam-cli/src/examples/soroban/core/: Cargo.toml.remove
crates/loam-cli/src/examples/soroban/status_message/: Cargo.toml.remove
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/: Cargo.toml  README.md  package-lock.json  package.json
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/contracts/custom_types/src/: lib.rs
crates/loam-cli/tests/fixtures/soroban-init-boilerplate/contracts/token/: Cargo.toml
crates/loam-cli/tests/it/: main.rs  util.rs
crates/loam-cli/tests/it/build_clients/: accounts.rs  contracts.rs  dev.rs  init_script.rs  manifest_path.rs  mod.rs  network.rs  no_environments.rs
crates/loam-core/: CHANGELOG.md  Cargo.toml
crates/loam-core-admins/: Cargo.toml  README.md
crates/loam-core-admins/src/: admin_set.rs  contract_call.rs  lib.rs
crates/loam-core/src/: admin.rs  admin_set.rs  lib.rs  owner.rs  redeploy.rs  soroban_sdk.rs
crates/loam-ft/: CHANGELOG.md  Cargo.toml
crates/loam-ft/src/: lib.rs
crates/loam-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-sdk-core/: Cargo.toml  README.md
crates/loam-sdk-macro/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-sdk-macro/src/: contract.rs  lib.rs  riff.rs  subcontract.rs  util.rs
crates/loam-sdk-macro/src/subcontract/: lazy.rs
crates/loam-sdk/src/: lib.rs
crates/loam-soroban/: CHANGELOG.md  Cargo.toml
crates/loam-soroban-sdk/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-soroban-sdk/src/: lib.rs
crates/loam-soroban/src/: into_key.rs  lib.rs  owner.rs
crates/loam-subcontract-core/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-subcontract-core/src/: admin.rs  owner.rs
crates/loam-subcontract-ft/: CHANGELOG.md  Cargo.toml  README.md
crates/loam-subcontract-ft/src/: lib.rs
crates/loam/src/: lib.rs  soroban_sdk.rs
crates/macro/: Cargo.toml
crates/macro-wrapper/: Cargo.toml  lib.rs  loam.rs
crates/macro-wrapper/core_impl/: mod.rs
crates/macro-wrapper/core_impl/utils/: mod.rs
crates/macro-wrapper/src/: contract.rs  lib.rs  loam.rs  util.rs
crates/macro-wrapper/src/loam/: into_key.rs
crates/macro-wrapper/test/normal/: Cargo.toml
crates/macro-wrapper/test/normal/src/: lib.rs
crates/macro/src/: contract.rs  lib.rs  loam.rs  riff.rs  util.rs
crates/macro/src/loam/: into_key.rs  lazy.rs
crates/macro/src/riff/: into_key.rs
crates/macro/test/normal/: Cargo.toml
crates/macro/test/normal/src/: lib.rs
crates/macro/test/other/: Cargo.toml
crates/macro/test/riff-dep/: Cargo.toml
crates/macro/test/riff-dep-dep/: Cargo.toml
examples/.cargo/: config.toml
examples/soroban/: Cargo.toml
examples/soroban/admins/: Cargo.toml
examples/soroban/admins/src/: lib.rs
examples/soroban/base/: Cargo.toml
examples/soroban/base/src/: gen.rs  lib.rs
examples/soroban/calculator/: Cargo.toml
examples/soroban/calculator/src/: gen.rs  lib.rs  riff.rs  subcontract.rs
examples/soroban/capitalizer/src/: error.rs  gen.rs  lib.rs
examples/soroban/core/: Cargo.toml
examples/soroban/core/src/: lib.rs
examples/soroban/doa/: Cargo.toml
examples/soroban/doa/src/: admins.rs  error.rs  lib.rs
examples/soroban/ft/: Cargo.toml
examples/soroban/ft/src/: ft.rs  lib.rs  sep41.rs
examples/soroban/nft/: Cargo.toml
examples/soroban/nft/src/: lib.rs  nft.rs  subcontract.rs
examples/soroban/status_message/: Cargo.toml
examples/soroban/status_message/src/: gen.rs  lib.rs  status_message.rs
npm/: .gitignore  README.md  package-lock.json  package.json  run.js
npm/__tests__/: test.ts
npm/src/: getBinary.ts  index.ts  utils.ts
stellar_version/: Cargo.toml
stellar_version/src/: main.rs
test/dep-normal/: Cargo.toml
test/dep-normal/src/: lib.rs
test/normal/: Cargo.toml
test/normal-dep/: Cargo.toml
test/normal-dep/src/: lib.rs
test/normal/src/: lib.rs
test/other/: Cargo.toml
test/riff-dep/: Cargo.toml
test/riff-dep-dep/: Cargo.toml
tests/soroban/status_message/: Cargo.toml
tests/soroban/status_message/src/: gen.rs  lib.rs
