[workspace]
resolver = "2"
members = ["crates/*", "examples/soroban/*", "test/*"]
exclude = ["test/*"]

[workspace.dependencies]
loam-sdk = { path = "./crates/loam-sdk" }
loam-sdk-core-riff = { path = "./crates/loam-core" }
loam-sdk-core-admins-riff = { path = "./crates/loam-core-admins" }
loam-soroban-sdk = { path = "./crates/loam-soroban-sdk" }
loam-sdk-macro = { path = "./crates/loam-sdk-macro" }
loam-sdk-ft = { path = "./crates/loam-ft" }

cargo_metadata = "0.15.4"
thiserror = "1.0.38"

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true
