[workspace]
resolver = "2"
members = ["crates/*", "crates/loam-cli/examples/soroban/*", "test/*"]
exclude = ["test/*"]

[workspace.dependencies]
loam-sdk = { path = "./crates/loam-sdk" }
loam-build = { path = "./crates/loam-build" }
loam-subcontract-core = { path = "./crates/loam-subcontract-core" }
loam-soroban-sdk = { path = "./crates/loam-soroban-sdk" }
loam-sdk-macro = { path = "./crates/loam-sdk-macro" }
loam-subcontract-ft = { path = "./crates/loam-subcontract-ft" }

cargo_metadata = "0.18.1"
thiserror = "1.0.38"

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true
