[workspace]
resolver = "2"
members = ["crates/*", "test/*", "examples/soroban/*", "stellar_version"]
exclude = ["test/*", "examples/soroban/*"]

[workspace.package]
repository = "https://github.com/loambuild/loam"

[workspace.dependencies]
loam-sdk = { path = "./crates/loam-sdk" }
loam-build = { path = "./crates/loam-build" }
loam-subcontract-core = { path = "./crates/loam-subcontract-core" }
loam-soroban-sdk = { path = "./crates/loam-soroban-sdk" }
loam-sdk-macro = { path = "./crates/loam-sdk-macro" }
loam-subcontract-ft = { path = "./crates/loam-subcontract-ft" }

soroban-sdk = { version = "21.5.0" }
stellar-strkey = "0.0.8"

cargo-run-bin = "1.7.3"
cargo_metadata = "0.18.1"
thiserror = "1.0.38"
sha2 = "0.10.7"

[profile.contracts]
inherits = "release"
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = true
panic = "abort"
codegen-units = 1
lto = true