[package]
name = "loam-build"
version = "0.1.0"
edition = "2021"
description = "A library for gathering Riffs and Contracts"
license = "Apache-2.0"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { workspace = true }
thiserror = { workspace = true }
topological-sort = "0.2.2"
