[package]
name = "loam-build"
version = "0.7.3"
edition = "2021"
description = "A library for gathering Subcontracts and Contracts"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-build"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo_metadata = { workspace = true }
thiserror = { workspace = true }
topological-sort = "0.2.2"
