[package]
name = "loam-cli"
description = "Loam CLI for building smart contracts"
homepage = "https://github.com/loambuild/loam-sdk"
repository = "https://github.com/loambuild/loam-sdk"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
license = "Apache-2.0"
readme = "../../README.md"
version = "0.7.0"
edition = "2021"
rust-version = "1.70"
autobins = false
default-run = "loam"

[[bin]]
name = "loam"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "loam_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
loam-build = { path = "../loam-build", version = "0.6.4" }
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }

clap-cargo-extra = "0.3.0"

thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"

tokio = { version = "1", features = ["full"] }
dirs = "4.0.0"
itertools = "0.10.5"
strsim = "0.10.0"
heck = "0.4.1"
cargo_metadata = "0.15.4"
pathdiff = "0.2.1"
shlex = "1.1.0"
symlink = "0.1.0"

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
predicates = "2.1.5"
