[package]
name = "loam-cli"
description = "Loam CLI for building smart contracts"
homepage = "https://github.com/loambuild/loam-sdk"
authors = ["Willem Wyndham <willem@ahalabs.dev>"]
license = "Apache-2.0"
readme = "../../README.md"
version = "0.14.3"
edition = "2021"
rust-version = "1.70"
autobins = false
default-run = "loam"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-cli"

[[bin]]
name = "loam"
path = "src/bin/main.rs"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/{ name }-v{ version }/{ name }-v{ version }-{ target }{ archive-suffix }"
bin-dir = "{ bin }{ binary-ext }"


[lib]
name = "loam_cli"
path = "src/lib.rs"
doctest = false

[dependencies]
loam-build = { path = "../loam-build", version = "0.7.3" }
soroban-cli = "21.5.0"
clap = { version = "4.1.8", features = [
    "derive",
    "env",
    "deprecated",
    "string",
] }

cargo_metadata = { workspace = true }
sha2 = { workspace = true }


clap-cargo-extra = "0.3.0"

thiserror = "1.0.31"
serde = "1.0.82"
serde_derive = "1.0.82"
serde_json = "1.0.82"

tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
dirs = "5.0.1"
itertools = "0.12.1"
ignore = "0.4"
strsim = "0.11.1"
heck = "0.5.0"
pathdiff = "0.2.1"
hex = "0.4.3"
shlex = "1.1.0"
symlink = "0.1.0"
toml = { version = "0.8.12", features = ["parse", "preserve_order"] }
rand = "0.8.5"
wasm-gen = { version = "0.1.4" }
notify = "6.1.1"
stellar-strkey = { workspace = true }
stellar-xdr = { workspace = true }
rust-embed = { version = "8.2.0", features = ["debug-embed"] }
regex = "1.10.5"
toml_edit = "0.22.16"
indexmap = { version = "1.9", features = ["serde"] }

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
fs_extra = "1.3.0"
predicates = "3.1.0"
walkdir = "2.3"
