[package]
name = "loam-sdk-core-riff"
version.workspace = true
edition = "2021"
description = "Core Riff for redeployable contracts"
license = "Apache-2.0"


[dependencies]
loam-sdk = { workspace = true, version = "0.6.3", features = [
    "loam-soroban-sdk",
] }

[package.metadata.loam]
riff = true
