[package]
name = "loam-sdk-macro"
version.workspace = true
edition = "2021"
description = "Macros needed by loam-sdk"
license = "Apache-2.0"


[lib]
proc-macro = true

[dependencies]
loam-build = { workspace = true, version = "0.6.3" }
proc-macro2 = "1.0"
syn = { version = "2", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
Inflector = { version = "0.11.4", default-features = false, features = [] }
thiserror = { workspace = true }
syn-file-expand = "0.2.0"
cargo_metadata = { workspace = true }

[dev-dependencies]
assert_fs = "1.0.13"

# rustfmt = { package = "rustfmt-nightly", git = "https://github.com/rust-lang/rustfmt.git", version = "1.5.1" }
