[package]
name = "loam-sdk-macro"
version = "0.8.1"
edition = "2021"
description = "Macros needed by loam-sdk"
license = "Apache-2.0"


[lib]
proc-macro = true

[dependencies]
loam-build = { path = "../loam-build", version = "0.7.2" }
proc-macro2 = "1.0"
syn = { version = "2", features = ["full", "fold", "extra-traits", "visit"] }
quote = "1.0"
Inflector = { version = "0.11.4", default-features = false, features = [] }
thiserror = { workspace = true }
syn-file-expand = "0.3.0"
cargo_metadata = { workspace = true }
darling = "0.20.8"
itertools = "0.12.1"

[dev-dependencies]
assert_fs = "1.0.13"

# rustfmt = { package = "rustfmt-nightly", git = "https://github.com/rust-lang/rustfmt.git", version = "1.5.1" }
