[package]
name = "loam-sdk"
version = "0.6.7"
edition = "2021"
description = "SDK  for writing smart contracts"
license = "Apache-2.0"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.7.0" }
loam-soroban-sdk = { path = "../loam-soroban-sdk", version = "0.6.7", optional = true }


[features]
default = ["loam-soroban-sdk"]
soroban-sdk-testutils = ["loam-soroban-sdk/testutils"]
