[package]
name = "loam-sdk"
version = "0.6.13"
edition = "2021"
description = "SDK  for writing smart contracts"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-sdk"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.8.2" }
loam-soroban-sdk = { path = "../loam-soroban-sdk", version = "0.6.13", optional = true }


[features]
default = ["loam-soroban-sdk"]
soroban-sdk-testutils = ["loam-soroban-sdk/testutils"]
soroban-sdk-alloc = ["loam-soroban-sdk/alloc"]
