[package]
name = "loam-soroban-sdk"
version = "0.6.8"
edition = "2021"
description = "A wrapper around the soroban-sdk, providing some soroban specific traits"
license = "Apache-2.0"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.8.0" }
soroban-sdk = { version = "21.0.1-preview.2" }


[features]
default = []
testutils = ["soroban-sdk/testutils"]
alloc = ["soroban-sdk/alloc"]
