[package]
name = "loam-soroban-sdk"
version = "0.6.13"
edition = "2021"
description = "A wrapper around the soroban-sdk, providing some soroban specific traits"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-soroban-sdk"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { path = "../loam-sdk-macro", version = "0.8.2" }
soroban-sdk = { version = "21.2.0" }


[features]
default = []
testutils = ["soroban-sdk/testutils"]
alloc = ["soroban-sdk/alloc"]
