[package]
name = "loam-soroban-sdk"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { workspace = true }

[dependencies.soroban-sdk]
version = "0.9.1"
git = "https://github.com/stellar/rs-soroban-sdk"
rev = "b1cec10b79cee3c1ecf63079b1088ce97b32c68a"
features = ["alloc"]


[features]
default = []
testutils = ["soroban-sdk/testutils"]
