[package]
name = "loam-soroban-sdk"
version = "0.1.0"
edition = "2021"
description = "A wrapper around the soroban-sdk, providing some soroban specific traits"
license = "Apache-2.0"


[lib]
crate-type = ["rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
loam-sdk-macro = { workspace = true }

[dependencies.soroban-sdk]
version = "0.9.2"



[features]
default = []
testutils = ["soroban-sdk/testutils"]
