[package]
name = "loam-subcontract-core"
version = "0.7.8"
edition = "2021"
description = "Core Subcontract for redeployable contracts"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-subcontract-core"


[dependencies]
loam-sdk = { path = "../loam-sdk", version = "0.6.15", features = [
    "loam-soroban-sdk",
] }

[package.metadata.loam]
subcontract = true
