[package]
name = "loam-subcontract-ft"
version = "0.6.8"
edition = "2021"
description = "A Subcontract for a fungible token"
license = "Apache-2.0"


[dependencies]
loam-sdk = { path = "../loam-sdk", version = "0.6.10", features = [
    "loam-soroban-sdk",
] }

[package.metadata.loam]
subcontract = true
