[package]
name = "loam-subcontract-ft"
version = "0.7.1"
edition = "2021"
description = "A Subcontract for a fungible token"
license = "Apache-2.0"
repository = "https://github.com/loambuild/loam/tree/main/crates/loam-subcontract-ft"


[dependencies]
loam-sdk = { path = "../loam-sdk", version = "0.6.15", features = [
    "loam-soroban-sdk",
] }

[package.metadata.loam]
subcontract = true
