[package]
name = "normal-dep"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
normal = { path = "../normal" }

loam-sdk = { workspace = true }
loam-sdk-macro = { workspace = true }
loam-subcontract-core = { workspace = true }

[package.metadata.loam]
contract = true
