[package]
name = "normal"
version = "0.1.0"
edition = "2021"
publish = false


[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
riff-dep = { path = "../riff-dep" }
other = { path = "../other" }

loam-sdk = { workspace = true }
loam-sdk-macro = { workspace = true }
loam-subcontract-core = { workspace = true }

[package.metadata.loam]
contract = true
