[package]
name = "soroban-token-contract"
description = "Soroban standard token contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { version = "21.7.2" }
soroban-token-sdk = { version = "21.7.2" }

[dev-dependencies]
soroban-sdk = { version = "21.7.2", features = ["testutils"] }